<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Equicaloric</string>
    <string name="action_settings">Settings</string>
    <string name="doing">Doing</string>
    <string name="burning">Burning</string>
    <string name="top_num_hint">0</string>
    <string name="reps">\u0020reps of</string>
    <string name="rep">\u0020rep of</string>
    <string name="minutes">\u0020minutes of</string>
    <string name="minute">\u0020minute of</string>
    <string name="exercise">Type of Exercise (or Equivalent Calories)</string>

    <string-array name="exercises_array">
        <item>Calorie(s)</item>
        <item>Cycling</item>
        <item>Jogging</item>
        <item>Jumping Jacks</item>
        <item>Leg-lifts</item>
        <item>Planks</item>
        <item>Pullups</item>
        <item>Pushups</item>
        <item>Situps</item>
        <item>Squats</item>
        <item>Stair-Climbing</item>
        <item>Swimming</item>
        <item>Walking</item>
    </string-array>

    <string name="equals">is equivalent to</string>
    <string name="bot_num_def">0</string>

</resources>
