<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:padding="12.5dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title">

        <RelativeLayout
            android:id="@+id/top"
            android:orientation="vertical"
            android:layout_height="0px"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:background="@color/primary">
            <LinearLayout
                android:id="@+id/top_content"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center" >
                <TextView android:text="@string/doing"
                    android:id="@+id/top_equals"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center" >
                    <EditText
                        android:id="@+id/topNumField"
                        style="@style/ContentNumField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/top_num_hint"
                        android:maxLength="6"
                        android:gravity="center_horizontal"/>
                    <TextView android:text="@string/reps"
                        android:id="@+id/topUnits"
                        style="@style/Content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Spinner
                    android:id="@+id/topSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:gravity="center"
                    android:prompt="@string/exercise"
                    android:paddingTop="5dp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom"
            android:orientation="vertical"
            android:layout_height="0px"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:background="@color/accent">
            <LinearLayout
                android:id="@+id/bot_content"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center" >
                <TextView android:text="@string/equals"
                    android:id="@+id/bot_equals"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center" >
                    <TextView android:text="@string/bot_num_def"
                        android:id="@+id/botNumField"
                        style="@style/Content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">
                    </TextView>
                    <TextView
                        android:id="@+id/botUnits"
                        style="@style/Content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <Spinner
                    android:id="@+id/botSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:gravity="center"
                    android:prompt="@string/exercise"
                    android:paddingTop="5dp"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
